--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>Leave a message and I’ll get in touch!</h2>
                 <p>Prefer email? <a href="mailto:you@example.com">you@example.com</a></p>
             </div>
-            <form class="contact-form" action="https://httpbin.org/post" method="post" novalidate>
+            <form class="contact-form" action="https://formspree.io/f/xeelnnyv" method="post" novalidate>
                 <div class="field">
                     <label for="name">Full name</label>
                     <input type="text" id="name" name="name" placeholder="John Snow" required>
