Update email address in contact section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container contact-inner">
             <div class="contact-copy">
                 <h2>Leave a message and I’ll get in touch!</h2>
-                <p>Prefer email? <a href="mailto:you@example.com">you@example.com</a></p>
+                <p>Prefer email? <a href="mailto:gubanyambryce@gmail.com">you@example.com</a></p>
             </div>
             <form class="contact-form" action="https://formspree.io/f/xeelnnyv" method="post" novalidate>
                 <div class="field">
