Update CV download link to point to Bryce.cv.pdf

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
                 <div class="cta">
                     <a class="btn btn-primary" href="#contact">Hire Me</a>
-                    <a class="btn btn-secondary" href="#" download>Download CV</a>
+                    <a class="btn btn-secondary" href="Bryce.cv.pdf" download>Download CV</a>
                 </div>
                 <ul class="chips" aria-label="core skills">
                     <li class="chip">HTML5</li>
