Fix HTML formatting and add menu toggle button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <header class=" site-header">
     <div class="container hearder-inner">
         <div class="logo">GUB-ANYAM <span>BRYCE</span></div>
+        <button class="menu-toggle" aria-expanded="false">☰</button>
         <nav class="main-nav" aria-label="Primary">
             <a href="#home">Home</a>
             <a href="#project">Projects</a>
